--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <!--====== Favicon Icon ======-->
   <link rel="shortcut icon" href="img/Icons/Promo.png" type="image/png">
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="bootstrap.min.css">
-  <link rel="stylesheet" href="animate.css">
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/LineIcons.css">
   <link rel="stylesheet" href="css/owl.carousel.css">
   <link rel="stylesheet" href="css/owl.theme.css">
