--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
   <link rel="stylesheet" href="css/responsive.css">
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-
   <!-- Header Section Start -->
   <header id="home" class="hero-area">
     <div class="overlay">
@@ -68,7 +66,7 @@
             <h2 class="head-title">Pare de Perder Tempo Procurando Cursos</h2>
             <p>Cansado de procurar cursos e não achar, tenha todos em único Canal</p>
             <div class="header-button">
-              <a href="https://pay.cakto.com.br/7byz3cJ" rel="nofollow" target="_blank"
+              <a href="https://pay.kirvano.com/9e83b4e7-a2bb-4863-9cbd-edc2bb3ab0ed" rel="nofollow" target="_blank"
                 class="btn btn-border-filled">ADQUIRA AGORA</a>
 
             </div>
@@ -134,13 +132,9 @@
     </div>
   </section>
   <!-- Services Section End -->
-
-
-
   <!-- Business Plan Section Start -->
   <section id="business-plan">
     <div class="container">
-
       <div class="row">
         <!-- Start Col -->
         <div class="col-lg-6 col-md-12 pl-0 pt-70 pr-5">
@@ -157,18 +151,13 @@
               encontra links organizados e atualizados semanalmente para cursos, livros e filmes – tudo em um só
               lugar!<br> Com um pagamento único, você garante acesso ilimitado a uma vasta seleção de conteúdo, sem
               mensalidades ou custos ocultos.</p>
-
           </div>
         </div>
         <!-- End Col -->
-
       </div>
     </div>
   </section>
   <!-- Business Plan Section End -->
-
-
-
   <!-- Cool Fetatures Section Start -->
   <section id="features" class="section">
     <div class="container">
@@ -185,7 +174,6 @@
             </div>
           </div>
         </div>
-
       </div>
       <!-- End Row -->
       <!-- Start Row -->
@@ -207,7 +195,6 @@
           <!-- End Fetatures -->
         </div>
         <!-- End Col -->
-
         <!-- Start Col -->
         <div class="col-lg-6 col-md-6 col-xs-12 p-0">
           <!-- Start Fetatures -->
@@ -225,7 +212,6 @@
           <!-- End Fetatures -->
         </div>
         <!-- End Col -->
-
         <!-- Start Col -->
         <div class="col-lg-6 col-md-6 col-xs-12 p-0">
           <!-- Start Fetatures -->
@@ -243,7 +229,6 @@
           <!-- End Fetatures -->
         </div>
         <!-- End Col -->
-
         <!-- Start Col -->
         <div class="col-lg-6 col-md-6 col-xs-12 p-0">
           <!-- Start Fetatures -->
@@ -262,7 +247,6 @@
           <!-- End Fetatures -->
         </div>
         <!-- End Col -->
-
         <!-- Start Col -->
         <div class="col-lg-6 col-md-6 col-xs-12 p-0">
           <!-- Start Fetatures -->
@@ -280,7 +264,6 @@
           <!-- End Fetatures -->
         </div>
         <!-- End Col -->
-
         <!-- Start Col -->
         <div class="col-lg-6 col-md-6 col-xs-12 p-0">
           <!-- Start Fetatures -->
@@ -298,15 +281,11 @@
           <!-- End Fetatures -->
         </div>
         <!-- End Col -->
-
-
       </div>
       <!-- End Row -->
     </div>
   </section>
   <!-- Cool Fetatures Section End -->
-
-
   <!-- Recent Showcase Section Start -->
   <section id="showcase">
     <div class="container-fluid right-position">
@@ -322,7 +301,6 @@
             </div>
           </div>
         </div>
-
       </div>
       <!-- End Row -->
       <!-- Start Row -->
@@ -335,11 +313,9 @@
                 <div class="hover-content text-center">
                   <div class="fancy-table">
                     <div class="table-cell">
-
                     </div>
                   </div>
                 </div>
-
               </div>
             </div>
             <div class="item">
@@ -359,7 +335,6 @@
                 <div class="hover-content text-center">
                   <div class="fancy-table">
                     <div class="table-cell">
-
                     </div>
                   </div>
                 </div>
@@ -396,7 +371,6 @@
                     </div>
                   </div>
                 </div>
-
               </div>
             </div>
             <div class="item">
@@ -508,7 +482,6 @@
                     </div>
                   </div>
                 </div>
-
               </div>
             </div>
             <div class="item">
@@ -562,7 +535,6 @@
     </div>
   </section>
   <!-- Recent Showcase Section End -->
-
   <!-- Our Pricing Plan Section Start -->
   <section id="pricing" class="section">
     <div class="container">
@@ -577,12 +549,10 @@
             </div>
           </div>
         </div>
-
       </div>
       <!-- End Row -->
       <!-- Start Row -->
       <div class="pricing-tables">
-
         <!--  Start Col -->
         <div class="col-lg-4 col-md-4 col-xs-12">
           <div class="pricing-table text-center">
@@ -610,13 +580,11 @@
     </div>
   </section>
   <!-- Our Pricing Plan Section End -->
-
   <!-- Client Testimoninals Section Start -->
   <section id="testimonial" class="section">
     <div class="container right-position">
       <!-- Start Row -->
       <div class="row">
-        
         <!-- End Row -->
         <!-- Start Row -->
         <div class="row justify-content-center testimonial-area">
@@ -714,7 +682,6 @@
                   </div>
                 </div>
               </div>
-
             </div>
           </div>
         </div>
@@ -722,14 +689,11 @@
       </div>
   </section>
   <!-- Client Testimoninals Section End -->
-
-
   </div>
   <!-- End Row -->
   </div>
   </section>
   <!-- Contact Us Section End -->
-
   <!-- Footer Section Start -->
   <footer>
     <!-- Footer Area Start -->
@@ -737,7 +701,6 @@
       <div class="container">
       </div>
       <!-- Copyright Start  -->
-
       <div class="copyright">
         <div class="container">
           <!-- Star Row -->
@@ -746,7 +709,6 @@
               <div class="site-info text-center">
                 <p> Feito Por <a href="" rel="nofollow"> Casa Dos Cursos</a></p>
               </div>
-
             </div>
             <!-- End Col -->
           </div>
@@ -759,19 +721,15 @@
 
   </footer>
   <!-- Footer Section End -->
-
-
   <!-- Go To Top Link -->
   <a href="#" class="back-to-top">
     <i class="lni-chevron-up"></i>
   </a>
-
   <!-- Preloader -->
   <div id="preloader">
     <div class="loader" id="loader-1"></div>
   </div>
   <!-- End Preloader -->
-
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
   <script src="js/jquery-min.js"></script>
   <script src="js/popper.min.js"></script>
@@ -785,7 +743,5 @@
   <script src="js/form-validator.min.js"></script>
   <script src="js/contact-form-script.js"></script>
   <script src="js/main.js"></script>
-
 </body>
-
 </html>
