--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
               </ul>
             </div>
             <div class="plan-button">
-              <a href="https://pay.cakto.com.br/7byz3cJ" class="btn btn-common">ADQUIRA Agora</a>
+              <a href="https://pay.kirvano.com/9e83b4e7-a2bb-4863-9cbd-edc2bb3ab0ed" class="btn btn-common">ADQUIRA Agora</a>
             </div>
           </div>
         </div>
